--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,9 @@ button:focus {
 .contact-button {
   background-color: #000;
 }
+.download-button {
+  background-color: #05676e;
+}
 a.button {
   margin-bottom : 20px;
 }
@@ -158,8 +161,13 @@ nav a {
     /* Reduce font-size of heading */
     font-size: 15px;
   }
-  .button {
+  a.button {
     /* Adjust Contact Button */
+    display: block;
+    text-align: center;
+  }
+  a.download-button {
+    /* Adjust CV Download Button */
     display: block;
     text-align: center;
   }
@@ -169,7 +177,7 @@ nav a {
     text-align: center;
   }
   .logo a {
-    /* Make logo smaller by changing it's height */
+    /* Make logo smaller by changing the font size */
     font-size: 25px;
   }
   nav {
