--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ nav {
 nav ul {
   list-style-type: none;
   padding: 0;
-  margin-top: 25px;
+  margin-top: 20px;
 }
 nav ul li{
   float: left;
@@ -171,10 +171,21 @@ nav a {
 .cloud-back {
   animation: 34s cloud-move-reverse infinite alternate linear;
 }
+.berlin-illustration {
+  max-width: 600px;
+}
 
 /* Border X get width  */
-div.borderXwidth a:before, div.borderXwidth a:after {
-display: inline-block;
+nav ul li a {
+  text-decoration: none;
+  margin: 0px 10px;
+  padding: 10px 10px;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+}
+nav ul.borderXwidth li a:before, nav ul.borderXwidth li a:after {
+  display: inline-block;
   position: absolute;
   opacity: 0;
   width: 0%;
@@ -183,15 +194,15 @@ display: inline-block;
   background: #960531;
   transition: all 0.3s;
 }
-div.borderXwidth a:before {
+nav ul.borderXwidth li a:before {
   left: 0px;
   top: 0px;
 }
-div.borderXwidth a:after {
+nav ul.borderXwidth li a:after {
   right: 0px;
   bottom: 0px;
 }
-div.borderXwidth a:hover:before, div.borderXwidth a:hover:after {
+nav ul.borderXwidth li a:hover:before, nav ul.borderXwidth li a:hover:after {
   opacity: 1;
   width: 100%;
 }
